Fixed spacing problem on prep time page

--- a/assets/style.css
+++ b/assets/style.css
@@ -67,11 +67,11 @@ margin-bottom: 5%;
 .timeclass {
     text-align: center;
     float: left;
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: 8px;
+    margin-left: 8px;
     margin-bottom: 5px;
-    height: 250px;
-    width: 200px;
+    height: 190px;
+    width: 150px;
 }
 #divPage4 {
     width: 675px;
